--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -4,9 +4,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist/**/*"
-  ],
+  "files": ["dist/**/*"],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -60,6 +58,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.1",
     "tippy.js": "6.3.7",
-    "tiptap-markdown": "0.8.9"
+    "tiptap-markdown": "0.8.9",
+    "use-debounce": "10.0.0"
   }
 }
