--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "biome check . --apply",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
