--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,7 +41,7 @@
     "geist": "1.2.1",
     "github-slugger": "2.0.0",
     "lucide-react": "0.314.0",
-    "next": "14.1.0",
+    "next": "canary",
     "next-auth": "4.24.5",
     "next-contentlayer": "0.3.4",
     "react": "18.2.0",
@@ -65,7 +65,7 @@
     "autoprefixer": "10.4.17",
     "config": "workspace:*",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "canary",
     "postcss": "8.4.33",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
