--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
+    "next-themes": "^0.2.1",
+    "sonner": "1.3.1",
     "tailwindcss": "3.4.1"
   }
 }
