--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@mindfulyze/utils",
+  "version": "0.0.0",
   "sideEffects": false,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
+  "files": ["dist/**"],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "check-types": "tsc --noEmit"
+  },
   "peerDependencies": {
     "next": "^14.0.0",
     "react": "^18.2.0"
@@ -13,6 +20,7 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "config": "workspace:*",
+    "tsup": "8.0.1",
     "typescript": "5.3.3"
   },
   "dependencies": {
