--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mindfulyze/database",
+  "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
@@ -9,12 +10,12 @@
     "dev": "prisma studio --browser none"
   },
   "dependencies": {
-    "@prisma/client": "5.9.1"
+    "@prisma/client": "5.8.1"
   },
   "devDependencies": {
-    "@types/node": "20.11.16",
+    "@types/node": "20.11.5",
     "config": "workspace:*",
-    "prisma": "5.9.1",
+    "prisma": "5.8.1",
     "typescript": "5.3.3"
   }
 }
