docs: 📝 update env. example

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -11,6 +11,8 @@
 # Do not store any sensitive information in this file, as it will be committed to version control.
 # If you clone this repository, create a copy named `.env` and populate it with your secrets.
 
+
+
 # -------------------
 # Prisma Configuration
 # -------------------
@@ -18,8 +20,8 @@
 # Replace [PASSWORD] with the actual password, which is generated in the Supabase platform.
 
 ## Use with Supabase
-# DATABASE_URL="postgres://postgres:__PASSWORD__@db.__YOUR_SUPABASE_PROJECT__.supabase.co:6543/postgres?pgbouncer=true"
-# DIRECT_URL="postgres://postgres:__PASSWORD__@db.__YOUR SUPABASE_PROJECT__.supabase.co:5432/postgres"
+# DATABASE_URL=postgres://postgres.__YOUR_SUPABASE_PROJECT__:__PASSWORD__@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true
+# DIRECT_URL=postgres://postgres.__YOUR_SUPABASE_PROJECT__:__PASSWORD__@aws-0-us-west-1.pooler.supabase.com:5432/postgres
 DATABASE_URL=
 DIRECT_URL=
 
@@ -28,6 +30,7 @@ DIRECT_URL=
 # Supabase Configuration
 # -------------------
 # Configure Supabase API credentials.
+# https://supabase.com/dashboard/project/__YOUR_SUPABASE_PROJECT__/settings/api
 
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
