--- a/packages/database/.env.example
+++ b/packages/database/.env.example
@@ -11,6 +11,8 @@
 # Do not store any sensitive information in this file, as it will be committed to version control.
 # If you clone this repository, create a copy named `.env` and populate it with your secrets.
 
+
+
 # -------------------
 # Prisma Configuration
 # -------------------
@@ -18,7 +20,7 @@
 # Replace [PASSWORD] with the actual password, which is generated in the Supabase platform.
 
 ## Use with Supabase
-# DATABASE_URL="postgres://postgres:__PASSWORD__@db.__YOUR_SUPABASE_PROJECT__.supabase.co:6543/postgres?pgbouncer=true"
-# DIRECT_URL="postgres://postgres:__PASSWORD__@db.__YOUR SUPABASE_PROJECT__.supabase.co:5432/postgres"
+# DATABASE_URL=postgres://postgres.__YOUR_SUPABASE_PROJECT__:__PASSWORD__@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true
+# DIRECT_URL=postgres://postgres.__YOUR_SUPABASE_PROJECT__:__PASSWORD__@aws-0-us-west-1.pooler.supabase.com:5432/postgres
 DATABASE_URL=
 DIRECT_URL=
