--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,12 +18,13 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "date-fns": "3.3.1",
+    "lucide-react": "0.321.0",
     "next-themes": "0.2.1",
     "react-day-picker": "8.10.0",
     "sonner": "1.3.1",
