feat(utils): ✨ add aptabase constant and improve constants

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -80,3 +80,11 @@ SECRET_IV=
 # Get your Cloudinary URL here: https://cloudinary.com/documentation/node_integration#configuration
 
 CLOUDINARY_URL=
+
+
+# -------------------
+# Aptabase Configuration
+# -------------------
+# Configure Aptabase api key.
+
+APTABASE_APP_KEY=
