--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@mindfulyze/utils",
-  "version": "0.0.0",
   "sideEffects": false,
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "files": ["dist/**"],
+  "exports": {
+    ".": {
+      "default": "./dist/index.mjs",
+      "types": "./dist/index.d.mts"
+    }
+  },
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
