--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,15 +1,9 @@
 {
   "name": "@mindfulyze/utils",
-  "version": "0.0.0",
-  "sideEffects": false,
-  "main": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
-  "files": ["dist/**"],
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "check-types": "tsc --noEmit"
-  },
+  "private": true,
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "files": ["src"],
   "peerDependencies": {
     "next": "^14.0.0",
     "react": "^18.2.0"
@@ -20,7 +14,6 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "config": "workspace:*",
-    "tsup": "8.0.1",
     "typescript": "5.3.3"
   },
   "dependencies": {
