Revert "chore: ⬆️ update dependencies"
This reverts commit 5bd778d45eb0e3e8bddbdc11bd6c4e4ef0e43b7e.

--- a/packages/transactional/package.json
+++ b/packages/transactional/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@mindfulyze/emails",
+  "version": "0.0.0",
+  "sideEffects": false,
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
@@ -10,15 +12,15 @@
   },
   "devDependencies": {
     "@mindfulyze/utils": "workspace:*",
-    "@types/react": "18.2.57",
+    "@types/react": "18.2.48",
     "config": "workspace:*",
     "react": "18.2.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@react-email/components": "0.0.14",
-    "nanoid": "5.0.6",
+    "nanoid": "5.0.4",
     "react-email": "2.0.0",
-    "resend": "3.2.0"
+    "resend": "3.0.0"
   }
 }
