--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@mindfulyze/ui",
+  "version": "0.0.0",
+  "sideEffects": false,
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
   "peerDependencies": {
@@ -7,10 +9,10 @@
   },
   "devDependencies": {
     "@mindfulyze/utils": "workspace:*",
-    "@types/react": "18.2.57",
-    "autoprefixer": "10.4.17",
+    "@types/react": "18.2.48",
+    "autoprefixer": "10.4.16",
     "config": "workspace:*",
-    "postcss": "8.4.35",
+    "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3"
@@ -22,10 +24,10 @@
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "date-fns": "3.3.1",
-    "lucide-react": "0.336.0",
+    "lucide-react": "0.321.0",
     "next-themes": "0.2.1",
     "react-day-picker": "8.10.0",
-    "sonner": "1.4.0",
+    "sonner": "1.3.1",
     "tailwindcss": "3.4.1"
   }
 }
