refactor(config): ♻️ move config out of packages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -54,12 +54,12 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@mindfulyze/config": "workspace:*",
     "@types/bcrypt": "5.0.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.17",
-    "config": "workspace:*",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "8.4.33",
