--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "config/tsconfig/nextjs.json",
+  "extends": "@mindfulyze/config/tsconfig/nextjs.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
