--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,8 +13,8 @@
     "@prisma/client": "5.8.1"
   },
   "devDependencies": {
+    "@mindfulyze/config": "workspace:*",
     "@types/node": "20.11.5",
-    "config": "workspace:*",
     "prisma": "5.8.1",
     "typescript": "5.3.3"
   }
