--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "config/tsconfig/react-library.json",
+  "extends": "@mindfulyze/config/tsconfig/react-library.json",
   "compilerOptions": {
     "resolveJsonModule": true,
     "incremental": false,
