--- a/packages/transactional/package.json
+++ b/packages/transactional/package.json
@@ -11,9 +11,9 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@mindfulyze/config": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
     "@types/react": "18.2.48",
-    "config": "workspace:*",
     "react": "18.2.0",
     "typescript": "5.3.3"
   },
