--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,10 +8,10 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@mindfulyze/config": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
     "@types/react": "18.2.48",
     "autoprefixer": "10.4.16",
-    "config": "workspace:*",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
