--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,11 +9,11 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@mindfulyze/config": "workspace:*",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "next": "14.1.0",
     "react": "18.2.0",
-    "config": "workspace:*",
     "typescript": "5.3.3"
   },
   "dependencies": {
