--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
-  "files": ["src"],
+  "files": [
+    "src"
+  ],
   "peerDependencies": {
     "next": "^14.0.0",
     "react": "^18.2.0"
@@ -18,6 +20,7 @@
   },
   "dependencies": {
     "clsx": "2.1.0",
-    "tailwind-merge": "2.2.1"
+    "tailwind-merge": "2.2.1",
+    "zod": "3.22.4"
   }
 }
