--- a/biome.json
+++ b/biome.json
@@ -12,6 +12,13 @@
       "a11y": {
         "noSvgWithoutTitle": "off"
       },
+      "nursery": {
+        "useGroupedTypeImport": "error",
+        "useExportType": "error",
+        "useImportType": "error",
+        "noEmptyTypeParameters": "error",
+        "useShorthandFunctionType": "error"
+      },
       "correctness": {
         "useExhaustiveDependencies": "off"
       }
