--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "next": "^14.0.0"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
@@ -14,6 +15,7 @@
     "autoprefixer": "10.4.16",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "next": "14.1.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3"
   },
