--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,23 +31,18 @@
     "bcrypt": "5.1.1",
     "class-variance-authority": "0.7.0",
     "cloudinary": "1.41.3",
-    "contentlayer": "0.3.4",
     "date-fns": "3.3.1",
     "dayjs": "1.11.10",
     "framer-motion": "10.18.0",
     "geist": "1.2.1",
-    "github-slugger": "2.0.0",
     "lucide-react": "0.321.0",
     "next": "14.1.0",
     "next-auth": "4.24.5",
-    "next-contentlayer": "0.3.4",
+    "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.3",
-    "rehype-autolink-headings": "7.1.0",
-    "rehype-slug": "6.0.0",
-    "remark-gfm": "4.0.0",
     "use-debounce": "10.0.0",
     "zod": "3.22.4"
   },
@@ -62,7 +57,8 @@
     "eslint-config-next": "14.1.0",
     "postcss": "8.4.33",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "velite": "0.1.0-beta.11"
   },
   "peerDependencies": {
     "@mindfulyze/ui": "workspace:*"
