--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,8 +21,8 @@
       "@/*": [
         "src/*",
       ],
-      "contentlayer/generated": [
-        "./.contentlayer/generated"
+      "@content": [
+        ".velite"
       ]
     },
     "downlevelIteration": true,
@@ -48,7 +48,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated"
+    "next.config.mjs"
   ],
   "exclude": [
     "node_modules"
