--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mindfulyze-monorepo",
+  "name": "mindfulyze",
   "private": true,
   "license": "MPL-2.0",
   "scripts": {
@@ -23,8 +23,6 @@
     "@commitlint/config-conventional": "18.6.1",
     "@commitlint/cz-commitlint": "18.6.1",
     "commitizen": "4.3.0",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "turbo": "1.12.3"
