--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,21 +1,20 @@
 {
   "name": "@mindfulyze/database",
-  "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
     "db:generate": "prisma generate",
-    "db:push": "prisma db push --skip-generate --accept-data-loss",
+    "db:push": "prisma db push --skip-generate",
     "db:migrate": "prisma migrate dev",
     "dev": "prisma studio --browser none"
   },
   "dependencies": {
-    "@prisma/client": "5.8.1"
+    "@prisma/client": "5.10.2"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
-    "@types/node": "20.11.5",
-    "prisma": "5.8.1",
+    "@types/node": "20.11.24",
+    "prisma": "5.10.2",
     "typescript": "5.3.3"
   }
 }
