--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,18 +3,16 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
-  "files": [
-    "src"
-  ],
+  "files": ["src"],
   "peerDependencies": {
     "next": "^14.0.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
-    "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
-    "next": "14.1.0",
+    "@types/node": "20.11.24",
+    "@types/react": "18.2.61",
+    "next": "14.1.1",
     "react": "18.2.0",
     "typescript": "5.3.3"
   },
