--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,45 +1,41 @@
 {
   "name": "@mindfulyze/editor",
-  "version": "0.0.0",
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
     "@mindfulyze/ui": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
-    "@types/react": "18.2.48",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.33",
+    "@types/react": "18.2.61",
+    "autoprefixer": "10.4.18",
+    "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@radix-ui/react-popover": "1.0.7",
-    "@tiptap/core": "2.1.16",
-    "@tiptap/extension-color": "2.1.16",
-    "@tiptap/extension-highlight": "2.1.16",
-    "@tiptap/extension-horizontal-rule": "2.1.16",
-    "@tiptap/extension-placeholder": "2.1.16",
-    "@tiptap/extension-task-item": "2.1.16",
-    "@tiptap/extension-task-list": "2.1.16",
-    "@tiptap/extension-text-style": "2.1.16",
-    "@tiptap/extension-typography": "^2.1.16",
-    "@tiptap/extension-underline": "2.1.16",
-    "@tiptap/html": "2.1.16",
-    "@tiptap/pm": "2.1.16",
-    "@tiptap/react": "2.1.16",
-    "@tiptap/starter-kit": "2.1.16",
-    "@tiptap/suggestion": "2.1.16",
-    "@types/react": "18.2.48",
+    "@tiptap/core": "2.2.4",
+    "@tiptap/extension-color": "2.2.4",
+    "@tiptap/extension-highlight": "2.2.4",
+    "@tiptap/extension-horizontal-rule": "2.2.4",
+    "@tiptap/extension-placeholder": "2.2.4",
+    "@tiptap/extension-task-item": "2.2.4",
+    "@tiptap/extension-task-list": "2.2.4",
+    "@tiptap/extension-text-style": "2.2.4",
+    "@tiptap/extension-typography": "^2.2.4",
+    "@tiptap/extension-underline": "2.2.4",
+    "@tiptap/html": "2.2.4",
+    "@tiptap/pm": "2.2.4",
+    "@tiptap/react": "2.2.4",
+    "@tiptap/starter-kit": "2.2.4",
+    "@tiptap/suggestion": "2.2.4",
     "class-variance-authority": "0.7.0",
-    "lucide-react": "0.314.0",
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "lucide-react": "0.344.0",
     "tailwindcss": "3.4.1",
     "tippy.js": "6.3.7",
     "tiptap-markdown": "0.8.9",
