--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -18,7 +18,6 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@radix-ui/react-popover": "1.0.7",
     "@tiptap/core": "2.2.4",
     "@tiptap/extension-color": "2.2.4",
     "@tiptap/extension-highlight": "2.2.4",
@@ -36,6 +35,7 @@
     "@tiptap/suggestion": "2.2.4",
     "class-variance-authority": "0.7.0",
     "lucide-react": "0.344.0",
+    "novel": "0.2.8",
     "tailwindcss": "3.4.1",
     "tippy.js": "6.3.7",
     "tiptap-markdown": "0.8.9",
