--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mindfulyze/editor",
-  "main": "./src/index.tsx",
-  "types": "./src/index.tsx",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,26 +19,12 @@
   },
   "dependencies": {
     "@tiptap/core": "2.2.4",
-    "@tiptap/extension-color": "2.2.4",
-    "@tiptap/extension-highlight": "2.2.4",
-    "@tiptap/extension-horizontal-rule": "2.2.4",
-    "@tiptap/extension-placeholder": "2.2.4",
-    "@tiptap/extension-task-item": "2.2.4",
-    "@tiptap/extension-task-list": "2.2.4",
-    "@tiptap/extension-text-style": "2.2.4",
     "@tiptap/extension-typography": "^2.2.4",
-    "@tiptap/extension-underline": "2.2.4",
     "@tiptap/html": "2.2.4",
     "@tiptap/pm": "2.2.4",
-    "@tiptap/react": "2.2.4",
-    "@tiptap/starter-kit": "2.2.4",
-    "@tiptap/suggestion": "2.2.4",
-    "class-variance-authority": "0.7.0",
     "lucide-react": "0.344.0",
-    "novel": "0.2.8",
+    "novel": "0.2.10",
     "tailwindcss": "3.4.1",
-    "tippy.js": "6.3.7",
-    "tiptap-markdown": "0.8.9",
     "use-debounce": "10.0.0"
   }
 }
