--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,28 +2,15 @@
   "extends": "@mindfulyze/config/tsconfig/nextjs.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ui/*": [
-        "src/components/ui/*",
-        "src/components/*"
-      ],
-      "@lib/*": [
-        "src/lib/*"
-      ],
-      "@/*": [
-        "src/*",
-      ],
-      "@content": [
-        ".velite"
-      ]
+      "@ui/*": ["src/components/ui/*", "src/components/*"],
+      "@lib/*": ["src/lib/*"],
+      "@/*": ["src/*"],
+      "@content": [".velite"]
     },
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
@@ -43,14 +30,6 @@
       }
     ]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "next.config.mjs"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
+  "exclude": ["node_modules"]
 }
