--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,22 +4,23 @@
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
   "peerDependencies": {
-    "react": "^18.2.0",
-    "next": "^14.0.0"
+    "next": "^14.0.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
     "@types/react": "18.2.61",
     "autoprefixer": "10.4.18",
+    "next": "14.1.1",
     "postcss": "8.4.35",
     "react": "18.2.0",
-    "next": "14.1.1",
     "react-dom": "18.2.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "1.1.2",
+    "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
@@ -28,6 +29,7 @@
     "lucide-react": "0.344.0",
     "next-themes": "0.2.1",
     "react-day-picker": "8.10.0",
+    "react-hook-form": "7.51.0",
     "sonner": "1.4.3",
     "tailwindcss": "3.4.1"
   }
