feat(ui): add dropdown menu component

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,7 +7,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["src/components/ui/*", "src/components/*"],
+      "@ui/*": ["src/components/*"],
       "@lib/*": ["src/lib/*"],
       "@/*": ["src/*"],
       "@content": [".velite"]
