--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mindfulyze/ui",
   "sideEffects": false,
-  "main": "./src/index.tsx",
-  "types": "./src/index.tsx",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "peerDependencies": {
     "next": "^14.0.0",
     "react": "^18.2.0"
@@ -23,6 +23,7 @@
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-select": "2.0.0",
