--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,15 +10,16 @@
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
-    "@types/node": "20.11.24",
-    "@types/react": "18.2.61",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.69",
+    "next": "14.1.4",
     "react": "18.2.0",
-    "typescript": "5.3.3"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "2.2.2",
     "clsx": "2.1.0",
-    "tailwind-merge": "2.2.1",
+    "tailwind-merge": "2.2.2",
     "zod": "3.22.4"
   }
 }
