--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,6 +6,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
     "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
     "dev": "prisma studio --browser none"
   },
   "dependencies": {
