chore(ci): fix migration script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo dev",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push",
-    "migrate": "turbo db:migrate",
+    "migrate": "turbo db:deploy",
     "lint": "biome check . && turbo lint",
     "prepare": "husky"
   },
