--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,38 +16,38 @@
     "@mindfulyze/emails": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@supabase/supabase-js": "2.39.8",
+    "@supabase/supabase-js": "2.42.0",
     "@vercel/analytics": "1.2.2",
     "@vercel/speed-insights": "1.0.10",
     "bcrypt": "5.1.1",
-    "cloudinary": "2.0.3",
+    "cloudinary": "2.1.0",
     "date-fns": "3.6.0",
-    "framer-motion": "11.0.20",
-    "geist": "1.2.2",
-    "lucide-react": "0.363.0",
-    "next": "14.1.4",
+    "framer-motion": "11.0.25",
+    "geist": "1.3.0",
+    "lucide-react": "0.365.0",
+    "next": "14.2.0-canary.61",
     "next-auth": "4.24.7",
     "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.51.1",
+    "react-hook-form": "7.51.2",
     "use-debounce": "10.0.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
     "@types/bcrypt": "5.0.2",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.69",
-    "@types/react-dom": "18.2.22",
+    "@types/node": "20.12.5",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "18.2.24",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "14.2.0-canary.61",
     "postcss": "8.4.38",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "3.4.3",
     "typescript": "5.2.2",
-    "velite": "0.1.0-beta.12"
+    "velite": "0.1.0-beta.13"
   },
   "peerDependencies": {
     "@mindfulyze/ui": "workspace:*"
