--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@aptabase/react": "0.3.3",
+    "@auth/prisma-adapter": "1.5.2",
     "@hookform/resolvers": "3.3.4",
     "@mindfulyze/database": "workspace:*",
     "@mindfulyze/editor": "workspace:*",
     "@mindfulyze/emails": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
-    "@next-auth/prisma-adapter": "1.0.7",
     "@supabase/supabase-js": "2.42.0",
     "@vercel/analytics": "1.2.2",
     "@vercel/speed-insights": "1.0.10",
@@ -26,7 +26,7 @@
     "geist": "1.3.0",
     "lucide-react": "0.365.0",
     "next": "14.2.0-canary.61",
-    "next-auth": "4.24.7",
+    "next-auth": "5.0.0-beta.16",
     "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
