--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -8,10 +8,12 @@
     "baseUrl": ".",
     "paths": {
       "@ui/*": ["src/components/*"],
+      "@actions/*": ["src/lib/actions/*"],
+      "@schemas/*": ["src/schemas/*"],
       "@lib/*": ["src/lib/*"],
-      "@/*": ["src/*"],
       "@content": [".velite"],
-      "types/*": ["src/types/*"]
+      "types/*": ["src/types/*"],
+      "@/*": ["src/*"]
     },
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
