--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,44 +10,44 @@
   },
   "dependencies": {
     "@aptabase/react": "0.3.3",
-    "@auth/prisma-adapter": "1.5.2",
+    "@auth/prisma-adapter": "1.6.0",
     "@hookform/resolvers": "3.3.4",
     "@mindfulyze/database": "workspace:*",
     "@mindfulyze/editor": "workspace:*",
     "@mindfulyze/emails": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
-    "@supabase/supabase-js": "2.42.0",
+    "@supabase/supabase-js": "2.42.3",
     "@vercel/analytics": "1.2.2",
     "@vercel/speed-insights": "1.0.10",
     "bcrypt": "5.1.1",
     "cloudinary": "2.1.0",
     "date-fns": "3.6.0",
-    "framer-motion": "11.0.25",
+    "framer-motion": "11.0.28",
     "geist": "1.3.0",
-    "lucide-react": "0.365.0",
-    "next": "14.2.0-canary.64",
+    "lucide-react": "0.368.0",
+    "next": "14.2.1",
     "next-auth": "5.0.0-beta.15",
     "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.51.2",
+    "react-hook-form": "7.51.3",
     "use-debounce": "10.0.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
     "@types/bcrypt": "5.0.2",
-    "@types/node": "20.12.5",
-    "@types/react": "18.2.74",
-    "@types/react-dom": "18.2.24",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.0-canary.64",
+    "eslint-config-next": "14.2.1",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.3",
     "typescript": "5.2.2",
-    "velite": "0.1.0-beta.13"
+    "velite": "0.1.0-beta.14"
   },
   "peerDependencies": {
     "@mindfulyze/ui": "workspace:*"
