chore: update deps

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,36 +10,36 @@
   },
   "dependencies": {
     "@aptabase/react": "0.3.3",
-    "@auth/prisma-adapter": "2.0.0",
-    "@hookform/resolvers": "3.3.4",
+    "@auth/prisma-adapter": "2.1.0",
+    "@hookform/resolvers": "3.4.2",
     "@mindfulyze/database": "workspace:*",
     "@mindfulyze/editor": "workspace:*",
     "@mindfulyze/emails": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
-    "@supabase/supabase-js": "2.43.1",
-    "@vercel/analytics": "1.2.2",
-    "@vercel/speed-insights": "1.0.10",
+    "@supabase/supabase-js": "2.43.4",
+    "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "1.0.11",
     "bcrypt": "5.1.1",
     "cloudinary": "2.2.0",
     "date-fns": "3.6.0",
-    "framer-motion": "11.1.7",
+    "framer-motion": "11.2.6",
     "geist": "1.3.0",
-    "lucide-react": "0.378.0",
+    "lucide-react": "0.379.0",
     "next": "14.2.3",
-    "next-auth": "5.0.0-beta.17",
-    "next-mdx-remote": "4.4.1",
+    "next-auth": "5.0.0-beta.18",
+    "next-mdx-remote": "5.0.0",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.51.3",
+    "react-hook-form": "7.51.5",
     "use-debounce": "10.0.0",
-    "zod": "3.23.6"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
     "@types/bcrypt": "5.0.2",
-    "@types/node": "20.12.8",
-    "@types/react": "18.3.1",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
@@ -47,7 +47,7 @@
     "postcss": "8.4.38",
     "tailwindcss": "3.4.3",
     "typescript": "5.3.3",
-    "velite": "0.1.0-beta.14"
+    "velite": "0.1.0-rc.3"
   },
   "peerDependencies": {
     "@mindfulyze/ui": "workspace:*"
