--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -25,6 +25,8 @@
     "lucide-react": "0.379.0",
     "novel": "0.4.2",
     "tailwindcss": "3.4.3",
+    "tiptap-extension-auto-joiner": "0.1.3",
+    "tiptap-extension-global-drag-handle": "0.1.7",
     "use-debounce": "10.0.0"
   }
 }
