feat(app): improve env for auth

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -43,8 +43,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 # Generate a new secret with: `openssl rand -base64 32`
 # For more details, refer to: https://next-auth.js.org/configuration/options#secret
 
-NEXTAUTH_SECRET="supersecret"
-NEXTAUTH_URL="http://localhost:3000"
+AUTH_SECRET="supersecret"
 
 
 # -------------------
@@ -52,8 +51,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # -------------------
 # Configure Google API credentials.
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
 
 
 # -------------------
