--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.3",
+    "@biomejs/biome": "1.8.1",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "commitizen": "4.3.0",
     "husky": "9.0.11",
-    "lint-staged": "15.2.4",
-    "turbo": "1.13.3"
+    "lint-staged": "15.2.7",
+    "turbo": "2.0.4"
   },
   "engines": {
     "node": "18.x || 20.x || 22.x",
     "pnpm": ">=9.0.0"
-  }
+  },
+  "packageManager": "pnpm@9.3.0"
 }
