--- a/turbo.json
+++ b/turbo.json
@@ -1,29 +1,25 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": [".env"],
-  "pipeline": {
+  "tasks": {
     "build": {
       "dependsOn": ["^db:generate", "^build"],
-      "outputs": ["!.next/cache/**", ".next/**", "dist/**"],
-      "dotEnv": [".env"]
+      "outputs": ["!.next/cache/**", ".next/**", "dist/**"]
     },
     "dev": {
       "dependsOn": ["^db:generate"],
       "cache": false,
-      "persistent": true,
-      "dotEnv": [".env"]
+      "persistent": true
     },
     "clean": {
       "cache": false
     },
     "lint": {},
     "db:generate": {
-      "cache": false,
-      "dotEnv": [".env"]
+      "cache": false
     },
     "db:push": {
-      "cache": false,
-      "dotEnv": [".env"]
+      "cache": false
     },
     "db:deploy": {
       "cache": false
