--- a/turbo.json
+++ b/turbo.json
@@ -4,22 +4,26 @@
   "tasks": {
     "build": {
       "dependsOn": ["^db:generate", "^build"],
-      "outputs": ["!.next/cache/**", ".next/**", "dist/**"]
+      "outputs": ["!.next/cache/**", ".next/**", "dist/**"],
+      "dotEnv": [".env"]
     },
     "dev": {
       "dependsOn": ["^db:generate"],
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dotEnv": [".env"]
     },
     "clean": {
       "cache": false
     },
     "lint": {},
     "db:generate": {
-      "cache": false
+      "cache": false,
+      "dotEnv": [".env"]
     },
     "db:push": {
-      "cache": false
+      "cache": false,
+      "dotEnv": [".env"]
     },
     "db:deploy": {
       "cache": false
