--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,45 +9,45 @@
     "start": "next start"
   },
   "dependencies": {
-    "@aptabase/react": "0.3.4",
-    "@auth/prisma-adapter": "2.4.2",
-    "@hookform/resolvers": "3.9.0",
+    "@aptabase/react": "0.3.3",
+    "@auth/prisma-adapter": "2.1.0",
+    "@hookform/resolvers": "3.4.2",
     "@mindfulyze/database": "workspace:*",
     "@mindfulyze/editor": "workspace:*",
     "@mindfulyze/emails": "workspace:*",
     "@mindfulyze/utils": "workspace:*",
-    "@supabase/supabase-js": "2.45.1",
+    "@supabase/supabase-js": "2.43.4",
     "@vercel/analytics": "1.3.1",
-    "@vercel/speed-insights": "1.0.12",
+    "@vercel/speed-insights": "1.0.11",
     "bcrypt": "5.1.1",
-    "cloudinary": "2.4.0",
+    "cloudinary": "2.2.0",
     "date-fns": "3.6.0",
-    "framer-motion": "11.3.23",
-    "geist": "1.3.1",
-    "lucide-react": "0.424.0",
-    "next": "14.2.5",
-    "next-auth": "5.0.0-beta.20",
+    "framer-motion": "11.2.6",
+    "geist": "1.3.0",
+    "lucide-react": "0.379.0",
+    "next": "14.2.3",
+    "next-auth": "5.0.0-beta.18",
     "next-mdx-remote": "5.0.0",
     "react": "18.3.1",
-    "react-day-picker": "9.0.7",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.52.2",
-    "use-debounce": "10.0.2",
+    "react-hook-form": "7.51.5",
+    "use-debounce": "10.0.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@mindfulyze/config": "workspace:*",
     "@types/bcrypt": "5.0.2",
-    "@types/node": "22.1.0",
+    "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "8.4.41",
-    "tailwindcss": "3.4.8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
     "typescript": "5.3.3",
-    "velite": "0.1.1"
+    "velite": "0.1.0-rc.3"
   },
   "peerDependencies": {
     "@mindfulyze/ui": "workspace:*"
