--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.3",
-    "husky": "9.0.11",
-    "lint-staged": "15.2.4",
-    "turbo": "1.13.3"
+    "@biomejs/biome": "1.8.3",
+    "husky": "9.1.4",
+    "lint-staged": "15.2.8",
+    "turbo": "2.0.12"
   },
   "engines": {
     "node": "18.x || 20.x || 22.x",
     "pnpm": ">=9.0.0"
-  }
+  },
+  "packageManager": "pnpm@9.7.0"
 }
