--- a/turbo.json
+++ b/turbo.json
@@ -1,28 +1,32 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [".env"],
   "tasks": {
     "build": {
       "dependsOn": ["^db:generate", "^build"],
-      "outputs": ["!.next/cache/**", ".next/**", "dist/**"]
+      "outputs": ["!.next/cache/**", ".next/**", "dist/**"],
+      "inputs": [".env"]
     },
     "dev": {
       "dependsOn": ["^db:generate"],
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "inputs": [".env"]
     },
     "clean": {
       "cache": false
     },
     "lint": {},
     "db:generate": {
-      "cache": false
+      "cache": false,
+      "inputs": [".env"]
     },
     "db:push": {
-      "cache": false
+      "cache": false,
+      "inputs": [".env"]
     },
     "db:deploy": {
-      "cache": false
+      "cache": false,
+      "inputs": [".env"]
     }
   },
   "ui": "tui"
